# notify-send-win

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
src/: main.rs
