[package]
name = "notify-send-win"
version = "0.1.0"
edition = "2021"
description = "A windows equivalent for notify-send "
authors = ["Blexyel (formerly known as PassiHD2004"]
homepage = "https://github.com/PassiHD2004/notify-send-win"
repository = "https://github.com/PassiHD2004/notify-send-win"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.5", features = ["derive"] }
win-toast-notify = "0.1.3"
